# modark

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: lint.yml
examples/: as_struct_using_modid.rs  filename_to_id_to_instrument_text.rs  filename_to_id_to_modinfo.rs  grab_request_count.rs  usual.rs
src/: lib.rs  search.rs  tests.rs
