[package]
name = "modark"
version = "0.5.2"
authors = ["RepellantMold <repellantmold@outlook.com>", "vivyir <ayitsmephoenix@airmail.cc>"]
edition = "2021"
description = "Simple library to get and parse Mod Archive module data (forked from trackermeta by vivyir for a Discord bot)"
readme = "README.md"
repository = "https://github.com/RepellantMold/modark"
license = "MPL-2.0"
keywords = ["modarchive", "metadata", "tracker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"

[profile.dev]
lto = "fat"

[profile.dev.package."*"]
opt-level = "s"

[profile.release]
opt-level = "s"
strip = true
lto = "fat"
codegen-units = 4

[profile.release.package."*"]
opt-level = "z"

[dependencies]
ureq = "2.10.0"
escaper = "0.1.1"
chrono = "0.4.38"
cfg-if = "1.0.0"
tl = "0.7.8"
roxmltree = "0.20.0"
thiserror = "1.0.62"
anyhow = "1.0.86"